# jolt

./: .gitignore  JOLT.ps1  README.md  frontend-test-output.txt
backend/: alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260712_0001_initial_schema.py  20260712_0002_application_lifecycle.py  20260712_0003_capture_runs.py  (+9 more)
backend/tests/: conftest.py  test_analysis_pack.py  test_api.py  test_application_index_timezones.py  test_application_lifecycle.py  test_application_lifecycle_e2e.py  test_application_preparation_pack.py  test_application_resources.py  test_application_work_items.py  test_application_workflow_acceptance_contract.py  test_atomic_capture_ingestion.py  test_backup.py  test_backup_audit.py  test_backup_cli.py  test_backup_edge_cases.py  test_capture_artifacts.py  test_capture_evidence_audit.py  test_capture_evidence_audit_cli_retry.py  test_capture_evidence_chain_e2e.py  test_capture_history_diagnostics.py  test_capture_ingestion.py  test_capture_run_audit_metadata.py  test_evaluation_strategy.py  test_health.py  test_identity_evidence.py  test_linkedin_adapter.py  test_linkedin_capture_retry.py  test_linkedin_capture_session.py  test_linkedin_identity.py  test_linkedin_playwright.py  test_live_capture_ingestion.py  test_live_capture_page_provenance.py  test_live_capture_request_integrity.py  test_manual_intake_workflow.py  test_migrations.py  test_multipage_capture.py  test_opportunity_workbench.py  test_playwright_visual_journey_contract.py  test_preparation_estimation.py  test_professional_intelligence_api.py  (+23 more)
(+171 files in other folders)
