[project]
name = "jolt-backend"
version = "0.1.0"
description = "Local-first API and domain services for JOLT"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "pydantic>=2.9,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "pyright>=1.1.390,<2",
  "ruff>=0.8,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jolt"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings --cov=src/jolt --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src"]
